# InfoSec

./: .pre-commit-config.yaml  pyproject.toml
lab1/: main.py
lab1/data/: input  output
